Fix spacing between status title and p

--- a/polaris.shopify.com/src/components/StatusBanner/StatusBanner.module.scss
+++ b/polaris.shopify.com/src/components/StatusBanner/StatusBanner.module.scss
@@ -28,5 +28,6 @@
 
   p {
     margin-bottom: 0;
+    margin-top: 0;
   }
 }
